--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -5,7 +5,7 @@ on:
       - raw-*/**
       - build.sbt
       - project/**
-      - .github/workflows/CI.yaml
+      - .github/workflows/ci.yaml
   workflow_dispatch:
 
 env:
