--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -12,51 +12,65 @@ env:
   SBT_OPTS : -Dsbt.log.noformat=true -Xss2m -Xms1g
 
 jobs:
-  code-checks:
-    runs-on: self-hosted
-    container:
-      image: ghcr.io/raw-labs/raw-scala-runner:ol8_java17_gvm22.3.0_scala2.12.15_sbt1.6.2
-      options: --user 1001
-      credentials:
-        username: ${{ github.actor }}
-        password: ${{ secrets.READ_PACKAGES }}
-    steps:
-      - uses: actions/checkout@v3
-      - run: sbt headerCheckAll
-      - run: sbt scalafmtCheckAll
-  tests:
-    needs: code-checks
-    runs-on: self-hosted
-    env:
-      SBT_FORK_OUTPUT_DIR : test-results
-      COURSIER_PROGRESS : false
-    container:
-      image: ghcr.io/raw-labs/raw-scala-runner:ol8_java17_gvm22.3.0_scala2.12.15_sbt1.6.2
-      options: --user 1001 --cpus 6 --memory 32g
-      credentials:
-        username: ${{ github.actor }}
-        password: ${{ secrets.READ_PACKAGES }}
-    steps:
-      - uses: actions/checkout@v3
-      - uses: oNaiPs/secrets-to-env-action@v1
-        with:
-          secrets: ${{ toJSON(secrets) }}
-      - run: ./rebuild.sh
-      - run: ./tests.sh
-      - uses: mikepenz/action-junit-report@v3
-        if: success() || failure()
-        with:
-          report_paths: ./**/test-reports/*.xml
-          detailed_summary: true
-      - uses: actions/upload-artifact@v3
-        with:
-          name: executor-logs
-          path: test-results/executor-logs
-          retention-days: 7
-          if-no-files-found: ignore
-      - uses: actions/upload-artifact@v3
-        with:
-          name: heap-dumps
-          path: test-results/heap-dumps
-          retention-days: 7
-          if-no-files-found: ignore
+  changed-files:
+      runs-on: self-hosted
+      steps:
+        - uses: actions/checkout@v3
+        - uses: tj-actions/changed-files@v37
+          id: rawsources
+          with:
+            files: raw-sources*/**
+            dir_names: "true"
+        - run: |
+            echo "Changed dirs: ${{ steps.rawsources.outputs.all_changed_files }}"
+            echo "Any changed raw-sources: ${{ steps.rawsources.outputs.any_changed }}"
+            echo "Only changed raw-sources: ${{ steps.rawsources.outputs.only_changed }}"
+   
+  #code-checks:
+  #  runs-on: self-hosted
+  #  container:
+  #    image: ghcr.io/raw-labs/raw-scala-runner:ol8_java17_gvm22.3.0_scala2.12.15_sbt1.6.2
+  #    options: --user 1001
+  #    credentials:
+  #      username: ${{ github.actor }}
+  #      password: ${{ secrets.READ_PACKAGES }}
+  #  steps:
+  #    - uses: actions/checkout@v3
+  #    - run: sbt headerCheckAll
+  #    - run: sbt scalafmtCheckAll
+  #tests:
+  #  needs: code-checks
+  #  runs-on: self-hosted
+  #  env:
+  #    SBT_FORK_OUTPUT_DIR : test-results
+  #    COURSIER_PROGRESS : false
+  #  container:
+  #    image: ghcr.io/raw-labs/raw-scala-runner:ol8_java17_gvm22.3.0_scala2.12.15_sbt1.6.2
+  #    options: --user 1001 --cpus 6 --memory 32g
+  #    credentials:
+  #      username: ${{ github.actor }}
+  #      password: ${{ secrets.READ_PACKAGES }}
+  #  steps:
+  #    - uses: actions/checkout@v3
+  #    - uses: oNaiPs/secrets-to-env-action@v1
+  #      with:
+  #        secrets: ${{ toJSON(secrets) }}
+  #    - run: ./rebuild.sh
+  #    - run: ./tests.sh
+  #    - uses: mikepenz/action-junit-report@v3
+  #      if: success() || failure()
+  #      with:
+  #        report_paths: ./**/test-reports/*.xml
+  #        detailed_summary: true
+  #    - uses: actions/upload-artifact@v3
+  #      with:
+  #        name: executor-logs
+  #        path: test-results/executor-logs
+  #        retention-days: 7
+  #        if-no-files-found: ignore
+  #    - uses: actions/upload-artifact@v3
+  #      with:
+  #        name: heap-dumps
+  #        path: test-results/heap-dumps
+  #        retention-days: 7
+  #        if-no-files-found: ignore
