--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -26,6 +26,12 @@ jobs:
             files: raw-sources*/**
             dir_names: "true"
             dir_names_max_depth: 1
+        - name: foward changed dirs
+          id: forward
+          run: |
+            echo "Changed dirs: ${{ steps.rawsources.outputs.all_changed_files }}"
+            echo "Any changed raw-sources: ${{ steps.rawsources.outputs.any_changed }}"
+            echo "Only changed raw-sources: ${{ steps.rawsources.outputs.only_changed }}"
   #code-checks:
   #  runs-on: self-hosted
   #  container:
