--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -15,7 +15,7 @@ jobs:
   changed-files:
     runs-on: self-hosted
     outputs:
-      all_changed_dirs: ${{ steps.rawsources.outputs.all_changed_files }}
+      all_sbt_projects: ${{ steps.convert.outputs.all_sbt_projects }}
       any_changed: ${{ steps.rawsources.outputs.any_changed }}
       only_changed: ${{ steps.rawsources.outputs.only_changed }}
     steps:
@@ -26,11 +26,19 @@ jobs:
           files: raw-sources*/**
           dir_names: "true"
           dir_names_max_depth: "1"
+      - name: convert to snapi subproject
+        id: convert
+        run: |
+          sbt_projects=""
+          for dir in ${{ steps.rawsources.outputs.all_changed_files }}; do
+            sbt_projects+=$(echo $dir | awk 'BEGIN{FS="-";OFS=""}{for(i=1;i<=NF;i++){$i=toupper(substr($i,1,1)) substr($i,2)}}1' | sed 's/^./\l&/')
+          done
+          echo "all_sbt_projects=$sbt_projects" >> $GITHUB_OUTPUT
   debug-changed-files:
     needs: changed-files
     runs-on: self-hosted
     steps:
-      - run: echo "all_changed_dirs ${{ needs.changed-files.outputs.all_changed_dirs }}"
+      - run: echo "all_sbt_projects ${{ needs.changed-files.outputs.all_sbt_projects }}"
       - if: ${{ needs.changed-files.outputs.any_changed }} == 'true'
         run: echo "any_changed ${{ needs.changed-files.outputs.any_changed }}"
       - if: ${{ needs.changed-files.outputs.only_changed }} == 'true'
@@ -48,8 +56,52 @@ jobs:
   #    - uses: actions/checkout@v3
   #    - run: sbt headerCheckAll
   #    - run: sbt scalafmtCheckAll
-  #tests:
-  #  needs: code-checks
+  #raw-sources-test:
+  #  needs: changed-files
+  #  runs-on: self-hosted
+  #  env:
+  #    SBT_FORK_OUTPUT_DIR : test-results
+  #    COURSIER_PROGRESS : false
+  #  container:
+  #    image: ghcr.io/raw-labs/raw-scala-runner:ol8_java17_gvm22.3.0_scala2.12.15_sbt1.6.2
+  #    options: --user 1001 --cpus 6 --memory 32g
+  #    credentials:
+  #      username: ${{ github.actor }}
+  #      password: ${{ secrets.READ_PACKAGES }}
+  #  steps:
+  #    - uses: actions/checkout@v3
+  #    - uses: oNaiPs/secrets-to-env-action@v1
+  #      with:
+  #        secrets: ${{ toJSON(secrets) }}
+  #    - run: ./rebuild.sh
+  #    - run: |
+  #        for dir in ${{ needs.changed-files.outputs.all_changed_dirs }}; do
+  #          # convert to camel case
+  #          sbt_project=$(echo $dir | sed -r 's/(-|^)([a-z])/\U\2/g') 
+  #          echo "Testing $dir"
+  #          cd $dir
+  #          sbt test
+  #          cd -
+  #        done
+  #    - uses: mikepenz/action-junit-report@v3
+  #      if: success() || failure()
+  #      with:
+  #        report_paths: ./**/test-reports/*.xml
+  #        detailed_summary: true
+  #    - uses: actions/upload-artifact@v3
+  #      with:
+  #        name: executor-logs
+  #        path: test-results/executor-logs
+  #        retention-days: 7
+  #        if-no-files-found: ignore
+  #    - uses: actions/upload-artifact@v3
+  #      with:
+  #        name: heap-dumps
+  #        path: test-results/heap-dumps
+  #        retention-days: 7
+  #        if-no-files-found: ignore
+  #truffle-tests:
+  #  needs: changed-files
   #  runs-on: self-hosted
   #  env:
   #    SBT_FORK_OUTPUT_DIR : test-results
