--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -3,7 +3,7 @@ on:
   repository_dispatch:
     types: [release]
 jobs:
-  code-checks:
+  create-gh-release:
     runs-on: self-hosted
     container:
       image: ghcr.io/raw-labs/raw-scala-runner:ol8_java17_gvm22.3.0_scala2.12.15_sbt1.6.2
@@ -28,3 +28,14 @@ jobs:
           files: |
             ./licenses/BSL.txt
             ./raw-cli/target/scala-2.12/raw-cli-assembly*.jar
+  notify-main-repo:
+    runs-on: self-hosted
+    steps:
+      - uses: actions/checkout@v3
+      - name: Notify main repo
+        uses: peter-evans/repository-dispatch@v2
+        with:
+          token: ${{ secrets.RAW_CI_PAT }}
+          repository: raw-labs/raw
+          event-type: release
+          client-payload: '{"ref": "${{ github.event.client_payload.ref }}", "tag": "${{ github.event.client_payload.tag }}"}'
