--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -37,5 +37,5 @@ jobs:
         with:
           token: ${{ secrets.RAW_CI_PAT }}
           repository: raw-labs/raw
-          event-type: release
+          event-type: snapi-release
           client-payload: '{"ref": "${{ github.event.client_payload.ref }}", "tag": "${{ github.event.client_payload.tag }}"}'
