--- a/raw-inferrer-local/src/main/resources/reference.conf
+++ b/raw-inferrer-local/src/main/resources/reference.conf
@@ -1,6 +1,6 @@
 raw.inferrer.local {
 
-    # Number of files to sample while inferring wildcars or folders. Use -1 for all.
+    # Number of files to sample while inferring wildcards or folders. Use -1 for all.
     sample-files = 10
 
     encoding-detection-read-size = 1M
@@ -11,15 +11,26 @@ raw.inferrer.local {
       separator-sample-size = 100
       # Weight for quoted values when choosing delimiter in csv files
       # 0.3 is a magic number, it was chosen so test "delimiter comas in quotes" works
-      quotedWeigth = 3.0
+      quoted-weight = 3.0
     }
 
-    hjson.sample-size = 10000
-    json.sample-size = 10000
-    text.sample-size = 10000
-    xml.sample-size = 10000
+    hjson {
+      sample-size = 10000
+    }
 
-    # buffered seekable input stream used only for text-formats
+    json {
+      sample-size = 10000
+    }
+
+    text {
+      sample-size = 10000
+    }
+
+    xml {
+      sample-size = 10000
+    }
+
+    # Buffered seekable input stream can be used for text-based formats.
     use-buffered-seekable-is = true
 
 }
