--- a/raw-inferrer-local/src/main/resources/reference.conf
+++ b/raw-inferrer-local/src/main/resources/reference.conf
@@ -7,7 +7,7 @@ raw.inferrer.local {
 
     csv {
       sample-size = 10000
-      # how many lines to use to guess the separator
+      # How many lines to use to guess the separator
       separator-sample-size = 100
       # Weight for quoted values when choosing delimiter in csv files
       # 0.3 is a magic number, it was chosen so test "delimiter comas in quotes" works
