--- a/raw-runtime-rql2-truffle/src/main/resources/reference.conf
+++ b/raw-runtime-rql2-truffle/src/main/resources/reference.conf
@@ -1,6 +1,6 @@
 raw.runtime {
 
-  time-zone = "UTC" // defaults to local timezone
+  time-zone = "UTC" # Defaults to local timezone
 
   scratch-path = /tmp/raw-scratch
 
