--- a/raw-compiler/src/main/resources/reference.conf
+++ b/raw-compiler/src/main/resources/reference.conf
@@ -1,13 +1,13 @@
 raw {
  compiler {
     inferrer {
-        // Number of inferrer threads.
+        # Number of inferrer threads.
         thread-pool-size = 8
-        // Timeout for an inference request.
+        # Timeout for an inference request.
         timeout = 30s
-        // Number of entries in the inferrer cache.
+        # Number of entries in the inferrer cache.
         cache-size = 100
-        // Time after which an inferrer cache entry expires if it is not accessed!
+        # Time after which an inferrer cache entry expires if it is not accessed!
         expiry = 30s
     }
     output-format = "hjson"
@@ -17,27 +17,27 @@ raw {
       interval = 50 ms
     }
     cache {
-      duration = 0 s // Do NOT cache by default
+      duration = 0 s # Do NOT cache by default
     }
     jvm {
       compilation-timeout = 300 s
     }
     scala2 {
-      // Settings used to compile queries, same format as if passed to scalac in the command line
-      // https://docs.scala-lang.org/overviews/compiler-options/index.html#introduction
-      // See scalac -opt:help for possible values.
+      # Settings used to compile queries, same format as if passed to scalac in the command line
+      # https://docs.scala-lang.org/overviews/compiler-options/index.html#introduction
+      # See scalac -opt:help for possible values.
 
-      // (msb): I think these make more sense, but keeping the "old ones" for now.
-      //settings = "-opt:inline:raw.runtime.**,inline:raw.query.**"
+      # (msb): I think these make more sense, but keeping the "old ones" for now.
+      #settings = "-opt:inline:raw.runtime.**,inline:raw.query.**"
 
       settings = "-opt:unreachable-code,box-unbox,simplify-jumps,redundant-casts,copy-propagation"
 
       classpath = []
       compilation-directory = ${java.io.tmpdir}"/raw-compilation"
       pretty-print-code = true
-      // Maximum number of classes to load on startup. If more than this limit is reached, delete code cache.
-      // Use 0 to always delete code cache and start fresh.
-      // Use -1 for no limit.
+      # Maximum number of classes to load on startup. If more than this limit is reached, delete code cache.
+      # Use 0 to always delete code cache and start fresh.
+      # Use -1 for no limit.
       max-classes-on-startup = 0
     }
   }
