--- a/raw-compiler/src/main/resources/reference.conf
+++ b/raw-compiler/src/main/resources/reference.conf
@@ -11,6 +11,7 @@ raw {
         expiry = 30s
     }
     output-format = "hjson"
+    windows-line-ending = false
     skip-phases = []
     retry {
       number = 1
