--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -24,6 +24,18 @@ jobs:
       - uses: actions/checkout@v3
       - run: sbt headerCheckAll
       - run: sbt scalafmtCheckAll
+      - run: sbt javafmtCheckAll
+  doc-gen-check:
+    runs-on: self-hosted
+    container:
+      image: ghcr.io/raw-labs/raw-scala-runner:ol8_java17_gvm22.3.0_scala2.12.15_sbt1.6.2
+      options: --user 1001
+      credentials:
+        username: ${{ github.actor }}
+        password: ${{ secrets.READ_PACKAGES }}
+    steps:
+      - uses: actions/checkout@v3
+      - run: sbt doc
   tests:
     needs: code-checks
     runs-on: self-hosted
