give us time to upgrade sbt version

--- a/.scala-steward.conf
+++ b/.scala-steward.conf
@@ -1,1 +1,6 @@
 updates.limit = 5
+
+dependencyOverrides = [{
+  pullRequests = { frequency = "30 days" },
+  dependency = { groupId = "org.scala-sbt" }
+}]
