--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -6,9 +6,6 @@ on:
       - build.sbt
       - project/**
       - .github/workflows/ci.yaml
-    branches:
-      - '!graal-21-modularize-v2'
-
   workflow_dispatch:
 
 env:
@@ -18,7 +15,7 @@ jobs:
   code-checks:
     runs-on: self-hosted
     container:
-      image: ghcr.io/raw-labs/raw-scala-runner:ol8_java17_gvm22.3.0_scala2.12.15_sbt1.6.2
+      image: ghcr.io/raw-labs/raw-scala-runner:21.0.0-ol9-20230919_scala2.12.18_sbt1.6.2
       options: --user 1001
       credentials:
         username: ${{ github.actor }}
@@ -31,7 +28,7 @@ jobs:
   doc-gen-check:
     runs-on: self-hosted
     container:
-      image: ghcr.io/raw-labs/raw-scala-runner:ol8_java17_gvm22.3.0_scala2.12.15_sbt1.6.2
+      image: ghcr.io/raw-labs/raw-scala-runner:21.0.0-ol9-20230919_scala2.12.18_sbt1.6.2
       options: --user 1001
       credentials:
         username: ${{ github.actor }}
@@ -46,7 +43,7 @@ jobs:
       SBT_FORK_OUTPUT_DIR : test-results
       COURSIER_PROGRESS : false
     container:
-      image: ghcr.io/raw-labs/raw-scala-runner:ol8_java17_gvm22.3.0_scala2.12.15_sbt1.6.2
+      image: ghcr.io/raw-labs/raw-scala-runner:21.0.0-ol9-20230919_scala2.12.18_sbt1.6.2
       options: --user 1001 --cpus 6 --memory 32g
       credentials:
         username: ${{ github.actor }}
