--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -2,9 +2,9 @@ name: CI
 on:
   pull_request:
     paths:
-      - raw-*/**
-      - build.sbt
-      - project/**
+      - deps/**
+      - language/**
+      - extensions/**
       - .github/workflows/ci.yaml
   workflow_dispatch:
 
