--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -50,6 +50,7 @@ jobs:
         password: ${{ secrets.READ_PACKAGES }}
     steps:
       - uses: actions/checkout@v3
+      - run: echo $HOME
       - name: build kiama
         run: ./build.sh
         working-directory: deps/kiama
@@ -79,11 +80,7 @@ jobs:
       - uses: oNaiPs/secrets-to-env-action@v1
         with:
           secrets: ${{ toJSON(secrets) }}
-      - run: |
-          whoami
-          cat /etc/passwd
-          ls -al /home
-          ./rebuild.sh
+      - run: ./rebuild.sh
       - run: ./tests.sh
       - uses: mikepenz/action-junit-report@v3
         if: success() || failure()
