--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -4,17 +4,17 @@ on:
     types: [publish]
   workflow_dispatch:
   push:
-    branches:
-      - master
-      - main
-    paths:
-      - raw-*/**
     tags:
       - "v*.*.*"
 jobs:
   build:
-    #(ybo)(todo): migrate to self-hosted
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
+    container:
+      image: ghcr.io/raw-labs/raw-scala-runner:21.0.0-ol9-20230919_scala2.12.18_sbt1.6.2
+      options: --user 1001 --cpus 6 --memory 32g -e HOME=/home/sbtuser
+      credentials:
+        username: ${{ github.actor }}
+        password: ${{ secrets.READ_PACKAGES }}
     env:
       JAVA_OPTS: -Xms2048M -Xmx2048M -Xss6M -XX:ReservedCodeCacheSize=256M -Dfile.encoding=UTF-8
       JVM_OPTS:  -Xms2048M -Xmx2048M -Xss6M -XX:ReservedCodeCacheSize=256M -Dfile.encoding=UTF-8
@@ -30,17 +30,17 @@ jobs:
       with:
         ref: ${{ github.event.client_payload.pull_request.head.sha }}
         fetch-depth: 0
-    - uses: actions/setup-java@v3
-      with:
-        distribution: temurin
-        java-version: 11
-        cache: sbt
+    - name: build deps
+      run: |
+        deps/kiama/build.sh
+        deps/scala-loggings/build.sh
     - if: github.event_name == 'repository_dispatch'
       name: evaluate produced version
       shell: bash
+      working-directory: language
       run: |
         sbt -Dsbt.log.noformat=true version > version_output.txt 2>&1
-        echo "DYNVER=$(awk -F '\t' '/\t[[:digit:]]/ {print $2}' version_output.txt | tail -n 1 | awk '{$1=$1;print}')" >> $GITHUB_ENV
+        echo "DYNVER=$(awk {print $2}' version_output.txt | tail -n 1 | awk '{$1=$1;print}')" >> $GITHUB_ENV
     - if: github.event_name == 'repository_dispatch'
       uses: peter-evans/create-or-update-comment@v2
       with:
@@ -51,6 +51,7 @@ jobs:
           > will publish version: ${{ env.DYNVER }}
         reactions: rocket
     - run: sbt ci-release
+      working-directory: language
       env:
         SONATYPE_USERNAME: ${{ secrets.SONATYPE_USERNAME }}
         SONATYPE_PASSWORD: ${{ secrets.SONATYPE_PASSWORD }}
