--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -15,6 +15,7 @@ jobs:
       - uses: actions/checkout@v3
         with:
           ref: ${{ github.event.client_payload.ref }}
+          fetch-depth: 0
       - run: ./rebuild.sh
       - run: sbt buildSnapi
       - uses: softprops/action-gh-release@v1
