--- a/version.properties
+++ b/version.properties
@@ -1,2 +1,3 @@
 language.version=0.24.27+3-8c27b206+20230928-1021-SNAPSHOT
-extensions.version=0.0.3
+extensions.version=0.0.5
+launcher.version=0.0.2
