steward for language and extensions projects

--- a/.scala-steward.conf
+++ b/.scala-steward.conf
@@ -1,6 +1,3 @@
 updates.limit = 5
 
-dependencyOverrides = [{
-  pullRequests = { frequency = "30 days" },
-  dependency = { groupId = "org.scala-sbt" }
-}]
+buildRoots = ["extensions", "language"]
