--- a/launcher/pom.xml
+++ b/launcher/pom.xml
@@ -31,7 +31,7 @@
         <dependency>
             <groupId>com.raw-labs</groupId>
             <artifactId>raw-language_2.12</artifactId>
-            <version>0.24.28+13-2445f608+20231002-1505-SNAPSHOT</version>
+            <version>0.24.30</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
