--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -22,24 +22,39 @@ jobs:
         password: ${{ secrets.READ_PACKAGES }}
     steps:
       - uses: actions/checkout@v3
-      - name: language headers
+      - name: utils headers
         run: sbt headerCheckAll
-        working-directory: language
-      - name: extensions headers
+        working-directory: utils
+      - name: client headers
         run: sbt headerCheckAll
-        working-directory: extensions
-      - name: language scala fmt
+        working-directory: client
+      - name: snapi-frontend headers
+        run: sbt headerCheckAll
+        working-directory: snapi-frontend
+      - name: snapi-truffle headers
+        run: sbt headerCheckAll
+        working-directory: snapi-truffle
+      - name: snapi-client headers
+        run: sbt headerCheckAll
+        working-directory: snapi-client
+      - name: utils scala fmt
         run: sbt scalafmtCheckAll
-        working-directory: language
-      - name: extensions scala fmt
+        working-directory: utils
+      - name: client scala fmt
         run: sbt scalafmtCheckAll
-        working-directory: extensions
-      - name: language java fmt
+        working-directory: client
+      - name: snapi-frontend scala fmt
+        run: sbt scalafmtCheckAll
+        working-directory: snapi-frontend
+      - name: snapi-truffle scala fmt
+        run: sbt scalafmtCheckAll
+        working-directory: snapi-truffle
+      - name: snapi-client scala fmt
+        run: sbt scalafmtCheckAll
+        working-directory: snapi-client
+      - name: snapi-truffle java fmt
         run: sbt javafmtCheckAll
-        working-directory: language
-      - name: extensions java fmt
-        run: sbt javafmtCheckAll
-        working-directory: extensions
+        working-directory: snapi-truffle
 
   tests:
     needs: code-checks
@@ -62,17 +77,35 @@ jobs:
         run: |
           deps/kiama/build.sh
           deps/scala-logging/build.sh
-      - name: build language
-        working-directory: language
+      - name: build utils
+        working-directory: utils
         run: ./build.sh
-      - name: build extensions
-        working-directory: extensions
+      - name: build client
+        working-directory: client
         run: ./build.sh
-      - name: language doc
-        working-directory: language
+      - name: build snapi-frontend
+        working-directory: snapi-frontend
+        run: ./build.sh
+      - name: build snapi-truffle
+        working-directory: snapi-truffle
+        run: ./build.sh
+      - name: build snapi-client
+        working-directory: snapi-client
+        run: ./build.sh
+      - name: utils doc
+        working-directory: utils
         run: sbt doc
-      - name: extensions doc
-        working-directory: extensions
+      - name: client doc
+        working-directory: client
+        run: sbt doc
+      - name: snapi-frontend doc
+        working-directory: snapi-frontend
+        run: sbt doc
+      - name: snapi-truffle doc
+        working-directory: snapi-truffle
+        run: sbt doc
+      - name: snapi-client doc
+        working-directory: snapi-client
         run: sbt doc
       - run: ./tests.sh
       - uses: mikepenz/action-junit-report@v3
