--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -22,6 +22,8 @@ jobs:
         password: ${{ secrets.READ_PACKAGES }}
     steps:
       - uses: actions/checkout@v3
+      - name: prep
+        run: touch utils/version && touch client/version && touch snapi-frontend/version && touch snapi-truffle/version && touch snapi-client/version
       - name: utils headers
         run: sbt headerCheckAll
         working-directory: utils
